# estate-api

./: .env.example  README.md  merge_sort.py  pyproject.toml
db/: connection.py
examples/: filters_input.json
service_likes/: schema_extension.sql
service_properties/: filters.py  handlers.py  repository.py  server.py  service.py
service_properties/tests/: test_filters.py  test_repository.py  test_service.py
